gcc/testsuite/rust/rustc/ui/const-generics/const-param-type-depends-on-type-param-ungated_dg.rs
use std::marker::PhantomData;

struct B<T, const N: T>(PhantomData<[T; N]>);
// { dg-error ".E0770." "" { target *-*-* } .-1 }

fn main() {}

